--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
 	"name": "decrypt-ui-website",
 	"version": "0.2.0",
 	"private": true,
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"fmt": "npx @biomejs/biome check --apply .",
+		"eject": "react-scripts eject"
+	},
 	"dependencies": {
 		"@radix-ui/react-icons": "^1.3.0",
 		"@testing-library/jest-dom": "^5.17.0",
@@ -19,24 +25,11 @@
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"fmt": "npx @biomejs/biome check --apply .",
-		"eject": "react-scripts eject"
-	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": ["react-app", "react-app/jest"]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
+		"production": [">0.2%", "not dead", "not op_mini all"],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
