--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.23.0",
 		"react-scripts": "5.0.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
@@ -48,6 +49,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.2",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.3"
